# cmake-

./: CMakeLists.txt  readme
lib_demo/: CMakeLists.txt  intf.c
mk_sh/: demo_app.img  demo_build.sh
pre_build/: CMakeLists.txt
pre_build/alsa_lib/: CMakeLists.txt  libasound.la  libatopology.la  libatopology.so.2.0.0
pre_build/alsa_lib/pkgconfig/: alsa.pc
